--- a/BoutikOnline/Web.config
+++ b/BoutikOnline/Web.config
@@ -9,6 +9,19 @@
     <add key="webpages:Enabled" value="false" />
      <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <!--modif pour paypal-->
+    <add key="PreserveLoginUrl" value="true"/>
+    <add key="business" value="xxxxxxxxxxx"/>
+    <add key="IsSandbox" value="true"/>
+    <add key="currency_code" value="USD"/>
+    <add key="return" value="http://localhost/PayPal/RedirectFromPaypal"/>
+    <add key="cancel_return" value="http://localhost/PayPal/CancelFromPaypal"/>
+    <add key="notify_url" value="http://localhost/PayPal/NotifyFromPaypal"/>
+
+    <add key="test_url" value="https://www.sandbox.paypal.com/cgi-bin/webscr"/>
+    <add key="prod_url" value="https://www.sandbox.paypal.com/cgi-bin/webscr"/>
+    <!--Fin modif paypal-->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
